--- a/Project_AUEB.ipynb
+++ b/Project_AUEB.ipynb
@@ -272,61 +272,245 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 32,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "((60000, 103), (60000,), (60000, 103))"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "flat_mixed_hsi = mixed_hsi.reshape((mixed_hsi.shape[0]*mixed_hsi.shape[1]), mixed_hsi.shape[2])\n",
-    "flat_labels = labels.flatten()\n",
-    "flat_pure_hsi = pure_hsi.reshape((pure_hsi.shape[0]*pure_hsi.shape[1]), pure_hsi.shape[2])\n",
+    "from prettytable import PrettyTable \n",
     "\n",
-    "flat_mixed_hsi.shape, flat_labels.shape, flat_pure_hsi.shape"
+    "\n",
+    "def arrays_stats(arrays: list[np.ndarray], names: list[str]|None = None, decimals: int = 2) -> PrettyTable:\n",
+    "    stats_table = PrettyTable([\"Array\", \"Shape\", \"Mean\", \"Std\", \"Min\", \"Max\", \"Q1\", \"Q3\"])\n",
+    "\n",
+    "    if names is None:\n",
+    "        names = [i for i in range(len(arrays))]\n",
+    "        \n",
+    "    if len(names) != len(arrays):\n",
+    "        raise ValueError(\"Names and arrays must have the same length.\")\n",
+    "        \n",
+    "    for name, array in zip(names, arrays):\n",
+    "        stats_table.add_row([name, array.shape, round(array.mean(), decimals),  round(array.std(), decimals),  \n",
+    "                             round(array.min(), decimals), round(array.mean(), decimals), \n",
+    "                             round(np.quantile(array, 0.25), decimals), round(np.quantile(array, 0.75), decimals)])\n",
+    "    return stats_table"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 33,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "X = []\n",
+    "endpoints = np.delete(np.unique(labels), np.unique(labels)==0)\n",
+    "\n",
+    "for endpoint in endpoints:\n",
+    "    x = hsi.copy()\n",
+    "    x[labels != endpoint] = 0\n",
+    "    X.append(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>Array</th>\n",
+       "            <th>Shape</th>\n",
+       "            <th>Mean</th>\n",
+       "            <th>Std</th>\n",
+       "            <th>Min</th>\n",
+       "            <th>Max</th>\n",
+       "            <th>Q1</th>\n",
+       "            <th>Q3</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>x1</td>\n",
+       "            <td>(300, 200, 103)</td>\n",
+       "            <td>24.38</td>\n",
+       "            <td>180.6</td>\n",
+       "            <td>0</td>\n",
+       "            <td>24.38</td>\n",
+       "            <td>0.0</td>\n",
+       "            <td>0.0</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>x2</td>\n",
+       "            <td>(300, 200, 103)</td>\n",
+       "            <td>33.84</td>\n",
+       "            <td>238.47</td>\n",
+       "            <td>0</td>\n",
+       "            <td>33.84</td>\n",
+       "            <td>0.0</td>\n",
+       "            <td>0.0</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>x3</td>\n",
+       "            <td>(300, 200, 103)</td>\n",
+       "            <td>58.68</td>\n",
+       "            <td>313.23</td>\n",
+       "            <td>0</td>\n",
+       "            <td>58.68</td>\n",
+       "            <td>0.0</td>\n",
+       "            <td>0.0</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>x4</td>\n",
+       "            <td>(300, 200, 103)</td>\n",
+       "            <td>12.8</td>\n",
+       "            <td>185.25</td>\n",
+       "            <td>0</td>\n",
+       "            <td>12.8</td>\n",
+       "            <td>0.0</td>\n",
+       "            <td>0.0</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>x5</td>\n",
+       "            <td>(300, 200, 103)</td>\n",
+       "            <td>36.71</td>\n",
+       "            <td>362.75</td>\n",
+       "            <td>0</td>\n",
+       "            <td>36.71</td>\n",
+       "            <td>0.0</td>\n",
+       "            <td>0.0</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>x6</td>\n",
+       "            <td>(300, 200, 103)</td>\n",
+       "            <td>84.06</td>\n",
+       "            <td>403.72</td>\n",
+       "            <td>0</td>\n",
+       "            <td>84.06</td>\n",
+       "            <td>0.0</td>\n",
+       "            <td>0.0</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>x7</td>\n",
+       "            <td>(300, 200, 103)</td>\n",
+       "            <td>31.32</td>\n",
+       "            <td>209.15</td>\n",
+       "            <td>0</td>\n",
+       "            <td>31.32</td>\n",
+       "            <td>0.0</td>\n",
+       "            <td>0.0</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>x8</td>\n",
+       "            <td>(300, 200, 103)</td>\n",
+       "            <td>52.92</td>\n",
+       "            <td>304.87</td>\n",
+       "            <td>0</td>\n",
+       "            <td>52.92</td>\n",
+       "            <td>0.0</td>\n",
+       "            <td>0.0</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>x9</td>\n",
+       "            <td>(300, 200, 103)</td>\n",
+       "            <td>3.0</td>\n",
+       "            <td>30.77</td>\n",
+       "            <td>0</td>\n",
+       "            <td>3.0</td>\n",
+       "            <td>0.0</td>\n",
+       "            <td>0.0</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
       "text/plain": [
-       "(6180000, 9)"
+       "+-------+-----------------+-------+--------+-----+-------+-----+-----+\n",
+       "| Array |      Shape      |  Mean |  Std   | Min |  Max  |  Q1 |  Q3 |\n",
+       "+-------+-----------------+-------+--------+-----+-------+-----+-----+\n",
+       "|   x1  | (300, 200, 103) | 24.38 | 180.6  |  0  | 24.38 | 0.0 | 0.0 |\n",
+       "|   x2  | (300, 200, 103) | 33.84 | 238.47 |  0  | 33.84 | 0.0 | 0.0 |\n",
+       "|   x3  | (300, 200, 103) | 58.68 | 313.23 |  0  | 58.68 | 0.0 | 0.0 |\n",
+       "|   x4  | (300, 200, 103) |  12.8 | 185.25 |  0  |  12.8 | 0.0 | 0.0 |\n",
+       "|   x5  | (300, 200, 103) | 36.71 | 362.75 |  0  | 36.71 | 0.0 | 0.0 |\n",
+       "|   x6  | (300, 200, 103) | 84.06 | 403.72 |  0  | 84.06 | 0.0 | 0.0 |\n",
+       "|   x7  | (300, 200, 103) | 31.32 | 209.15 |  0  | 31.32 | 0.0 | 0.0 |\n",
+       "|   x8  | (300, 200, 103) | 52.92 | 304.87 |  0  | 52.92 | 0.0 | 0.0 |\n",
+       "|   x9  | (300, 200, 103) |  3.0  | 30.77  |  0  |  3.0  | 0.0 | 0.0 |\n",
+       "+-------+-----------------+-------+--------+-----+-------+-----+-----+"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "X = []\n",
-    "\n",
-    "for endpoint in np.unique(labels):\n",
-    "    if endpoint != 0:\n",
-    "        x = hsi.copy()\n",
-    "        x[labels != endpoint] = 0\n",
-    "        X.append(x)\n",
-    "\n",
+    "arrays_stats(X, names=[f\"x{endpoint}\" for endpoint in endpoints])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>Array</th>\n",
+       "            <th>Shape</th>\n",
+       "            <th>Mean</th>\n",
+       "            <th>Std</th>\n",
+       "            <th>Min</th>\n",
+       "            <th>Max</th>\n",
+       "            <th>Q1</th>\n",
+       "            <th>Q3</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>0</td>\n",
+       "            <td>(6180000, 9)</td>\n",
+       "            <td>37.52</td>\n",
+       "            <td>270.6</td>\n",
+       "            <td>0</td>\n",
+       "            <td>37.52</td>\n",
+       "            <td>0.0</td>\n",
+       "            <td>0.0</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "+-------+--------------+-------+-------+-----+-------+-----+-----+\n",
+       "| Array |    Shape     |  Mean |  Std  | Min |  Max  |  Q1 |  Q3 |\n",
+       "+-------+--------------+-------+-------+-----+-------+-----+-----+\n",
+       "|   0   | (6180000, 9) | 37.52 | 270.6 |  0  | 37.52 | 0.0 | 0.0 |\n",
+       "+-------+--------------+-------+-------+-----+-------+-----+-----+"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "X = np.array(X)\n",
     "X = np.moveaxis(X, 0, 3)\n",
     "X = X.reshape((X.shape[0]*X.shape[1]*X.shape[2]), X.shape[3])\n",
-    "X.shape"
+    "arrays_stats([X])"
    ]
   },
   {
@@ -339,7 +523,7 @@
     {
      "data": {
       "text/plain": [
-       "(37.52302833513125, 270.5976037398824)"
+       "(1142.2932409385114, 1004.297350864736)"
       ]
      },
      "execution_count": 17,
@@ -348,12 +532,98 @@
     }
    ],
    "source": [
-    "X.mean(), X.std()"
+    "mixed_hsi.mean(), mixed_hsi.std()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-1.0332497 , -0.82106883, -0.81343389, -0.52275707, -0.38872333,\n",
+       "       -0.69587511, -0.98579445, -0.77810561, -4.41380048])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import LinearRegression\n",
+    "\n",
+    "y = mixed_hsi.flatten()\n",
+    "model = LinearRegression(fit_intercept=True).fit(X, y)\n",
+    "model.coef_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([0., 0., 0., 0., 0., 0., 0., 0., 0.]), 3781150.9579215427)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from scipy import optimize\n",
+    "\n",
+    "optimize.nnls(X, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "       message: The unconstrained solution is optimal.\n",
+       "       success: True\n",
+       "        status: 3\n",
+       "           fun: [-9.030e+02 -7.630e+02 ... -3.020e+03 -3.078e+03]\n",
+       "             x: [ 0.000e+00  0.000e+00  0.000e+00  0.000e+00  0.000e+00\n",
+       "                  0.000e+00  0.000e+00  0.000e+00  0.000e+00]\n",
+       "           nit: 0\n",
+       "          cost: 7148551283295.5\n",
+       "    optimality: 0.0\n",
+       "   active_mask: [ 0.000e+00  0.000e+00  0.000e+00  0.000e+00  0.000e+00\n",
+       "                  0.000e+00  0.000e+00  0.000e+00  0.000e+00]\n",
+       " unbounded_sol: (array([ 0.000e+00,  0.000e+00,  0.000e+00,  0.000e+00,\n",
+       "                        0.000e+00,  0.000e+00,  0.000e+00,  0.000e+00,\n",
+       "                        0.000e+00]), array([ 1.430e+13]), 9, array([ 1.025e+06,  9.064e+05,  7.922e+05,  7.692e+05,\n",
+       "                        5.988e+05,  5.257e+05,  4.616e+05,  4.530e+05,\n",
+       "                        7.685e+04]))"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "optimize.lsq_linear(X, y, bounds=(0,1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {
     "tags": []
    },
@@ -364,22 +634,41 @@
        "array([0., 0., 0., 0., 0., 0., 0., 0., 0.])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from sklearn.linear_model import LinearRegression\n",
-    "\n",
-    "\n",
-    "model = LinearRegression(fit_intercept=False).fit(X, mixed_hsi.flatten())\n",
-    "model.coef_"
+    "model_pos = LinearRegression(fit_intercept=False, positive=True).fit(X, mixed_hsi.flatten())\n",
+    "model_pos.coef_"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 22,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.30062241272995116"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.score(X, mixed_hsi.flatten())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -393,7 +682,7 @@
       "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'classification_labels_Pavia.mat'",
       "\nDuring handling of the above exception, another exception occurred:\n",
       "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[16], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Trainining set for classification \u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m Pavia_labels \u001b[38;5;241m=\u001b[39m sio\u001b[38;5;241m.\u001b[39mloadmat(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mclassification_labels_Pavia.mat\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m      3\u001b[0m Training_Set \u001b[38;5;241m=\u001b[39m (np\u001b[38;5;241m.\u001b[39mreshape(Pavia_labels[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtraining_set\u001b[39m\u001b[38;5;124m'\u001b[39m],(\u001b[38;5;241m200\u001b[39m,\u001b[38;5;241m300\u001b[39m)))\u001b[38;5;241m.\u001b[39mT\n\u001b[0;32m      4\u001b[0m Test_Set \u001b[38;5;241m=\u001b[39m (np\u001b[38;5;241m.\u001b[39mreshape(Pavia_labels[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtest_set\u001b[39m\u001b[38;5;124m'\u001b[39m],(\u001b[38;5;241m200\u001b[39m,\u001b[38;5;241m300\u001b[39m)))\u001b[38;5;241m.\u001b[39mT\n",
+      "Cell \u001b[1;32mIn[23], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Trainining set for classification \u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m Pavia_labels \u001b[38;5;241m=\u001b[39m sio\u001b[38;5;241m.\u001b[39mloadmat(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mclassification_labels_Pavia.mat\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m      3\u001b[0m Training_Set \u001b[38;5;241m=\u001b[39m (np\u001b[38;5;241m.\u001b[39mreshape(Pavia_labels[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtraining_set\u001b[39m\u001b[38;5;124m'\u001b[39m],(\u001b[38;5;241m200\u001b[39m,\u001b[38;5;241m300\u001b[39m)))\u001b[38;5;241m.\u001b[39mT\n\u001b[0;32m      4\u001b[0m Test_Set \u001b[38;5;241m=\u001b[39m (np\u001b[38;5;241m.\u001b[39mreshape(Pavia_labels[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtest_set\u001b[39m\u001b[38;5;124m'\u001b[39m],(\u001b[38;5;241m200\u001b[39m,\u001b[38;5;241m300\u001b[39m)))\u001b[38;5;241m.\u001b[39mT\n",
       "File \u001b[1;32m~\\anaconda3\\envs\\manis\\Lib\\site-packages\\scipy\\io\\matlab\\_mio.py:225\u001b[0m, in \u001b[0;36mloadmat\u001b[1;34m(file_name, mdict, appendmat, **kwargs)\u001b[0m\n\u001b[0;32m     88\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m     89\u001b[0m \u001b[38;5;124;03mLoad MATLAB file.\u001b[39;00m\n\u001b[0;32m     90\u001b[0m \n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    222\u001b[0m \u001b[38;5;124;03m    3.14159265+3.14159265j])\u001b[39;00m\n\u001b[0;32m    223\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m    224\u001b[0m variable_names \u001b[38;5;241m=\u001b[39m kwargs\u001b[38;5;241m.\u001b[39mpop(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mvariable_names\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;28;01mNone\u001b[39;00m)\n\u001b[1;32m--> 225\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m _open_file_context(file_name, appendmat) \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[0;32m    226\u001b[0m     MR, _ \u001b[38;5;241m=\u001b[39m mat_reader_factory(f, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n\u001b[0;32m    227\u001b[0m     matfile_dict \u001b[38;5;241m=\u001b[39m MR\u001b[38;5;241m.\u001b[39mget_variables(variable_names)\n",
       "File \u001b[1;32m~\\anaconda3\\envs\\manis\\Lib\\contextlib.py:137\u001b[0m, in \u001b[0;36m_GeneratorContextManager.__enter__\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    135\u001b[0m \u001b[38;5;28;01mdel\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39margs, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mkwds, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mfunc\n\u001b[0;32m    136\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m--> 137\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mnext\u001b[39m(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mgen)\n\u001b[0;32m    138\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mStopIteration\u001b[39;00m:\n\u001b[0;32m    139\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mRuntimeError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mgenerator didn\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mt yield\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n",
       "File \u001b[1;32m~\\anaconda3\\envs\\manis\\Lib\\site-packages\\scipy\\io\\matlab\\_mio.py:17\u001b[0m, in \u001b[0;36m_open_file_context\u001b[1;34m(file_like, appendmat, mode)\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[38;5;129m@contextmanager\u001b[39m\n\u001b[0;32m     16\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m_open_file_context\u001b[39m(file_like, appendmat, mode\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrb\u001b[39m\u001b[38;5;124m'\u001b[39m):\n\u001b[1;32m---> 17\u001b[0m     f, opened \u001b[38;5;241m=\u001b[39m _open_file(file_like, appendmat, mode)\n\u001b[0;32m     18\u001b[0m     \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m     19\u001b[0m         \u001b[38;5;28;01myield\u001b[39;00m f\n",
