--- a/Project_AUEB.ipynb
+++ b/Project_AUEB.ipynb
@@ -207,6 +207,21 @@
     "\n",
     "\n",
     "def arrays_stats(arrays: list[np.ndarray], names: list[str]|None = None, decimals: int = 2) -> PrettyTable:\n",
+    "    \"\"\"\n",
+    "    Generate statistics for a list of NumPy arrays and create a PrettyTable.\n",
+    "\n",
+    "    :param arrays: List of NumPy arrays for which statistics are calculated.\n",
+    "    :type arrays: list[np.ndarray]\n",
+    "\n",
+    "    :param names: List of names corresponding to each array. If None, default names will be generated based on array indices. Default is None.\n",
+    "    :type names: list[str]|None\n",
+    "\n",
+    "    :param decimals: Number of decimals to round the statistical values. Default is 2.\n",
+    "    :type decimals: int\n",
+    "\n",
+    "    :return: Table containing statistics for each array, including mean, standard deviation, minimum, maximum, first quartile (Q1), and third quartile (Q3).\n",
+    "    :rtype: PrettyTable\n",
+    "    \"\"\"\n",
     "    stats_table = PrettyTable([\"Array\", \"Shape\", \"Mean\", \"Std\", \"Min\", \"Max\", \"Q1\", \"Q3\"])\n",
     "    \n",
     "    if type(decimals) is not int:\n",
@@ -235,32 +250,10 @@
     {
      "data": {
       "text/plain": [
-       "(300, 200, 1, 1)"
+       "((103, 9), (103, 60000))"
       ]
      },
      "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "labels[:, :, np.newaxis, np.newaxis].shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "((103, 9), (60000, 103))"
-      ]
-     },
-     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {
     "tags": []
    },
@@ -299,7 +292,7 @@
        "    <tbody>\n",
        "        <tr>\n",
        "            <td>y1</td>\n",
-       "            <td>(60000, 103)</td>\n",
+       "            <td>(103, 60000)</td>\n",
        "            <td>1480.0</td>\n",
        "            <td>891.47</td>\n",
        "            <td>0</td>\n",
@@ -324,23 +317,23 @@
        "+-------+--------------+---------+--------+--------+---------+---------+---------+\n",
        "| Array |    Shape     |   Mean  |  Std   |  Min   |   Max   |    Q1   |    Q3   |\n",
        "+-------+--------------+---------+--------+--------+---------+---------+---------+\n",
-       "|   y1  | (60000, 103) |  1480.0 | 891.47 |   0    |   8000  |  796.0  |  1987.0 |\n",
+       "|   y1  | (103, 60000) |  1480.0 | 891.47 |   0    |   8000  |  796.0  |  1987.0 |\n",
        "|   x1  |   (103, 9)   | 1551.32 | 926.43 | 128.24 | 4745.65 | 1093.66 | 1897.79 |\n",
        "+-------+--------------+---------+--------+--------+---------+---------+---------+"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "arrays_stats([y1, x1], names=[\"y1\",\"x1\"])"
+    "arrays_stats([y1, x1], names=[\"y1\", \"x1\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -359,14 +352,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([  9.4860257 ,  -1.09972437,   7.29718391,   0.50633153,\n",
+       "         0.11154806,   0.38550746, -12.03692148,  -9.2428594 ,\n",
+       "        -9.61408365])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from sklearn.linear_model import LinearRegression\n",
-    "\n",
     "\n",
     "base_model = LinearRegression(fit_intercept=True).fit(x1, y1)\n",
     "base_abundance = abundance_matrix(base_model)\n",
@@ -375,98 +380,216 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.        , 0.        , 0.47847075, 0.        , 0.16461236,\n",
+       "       0.        , 0.        , 0.        , 0.73790708])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "pos_model = LinearRegression(fit_intercept=False, positive=True).fit(x1, y1)\n",
-    "pos_abundance = abundance_matrix(model)\n",
+    "pos_abundance = abundance_matrix(pos_model)\n",
     "pos_abundance[focus_point]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.        , 0.        , 0.47942755, 0.        , 0.16446791,\n",
+       "       0.        , 0.        , 0.        , 0.73377197])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from sklearn.linear_model import Lasso\n",
-    "import warnings\n",
     "\n",
     "\n",
-    "with warnings.catch_warnings():\n",
-    "    warnings.filterwarnings('ignore')\n",
-    "    lasso = Lasso(fit_intercept=False, positive=True).fit(x1, y1)\n",
-    "    lasso_abundance = abundance_matrix(lasso)\n",
-    "    \n",
+    "lasso = Lasso(fit_intercept=False, positive=True, tol=1e-3, max_iter=int(1e5)).fit(x1, y1)\n",
+    "lasso_abundance = abundance_matrix(lasso)\n",
     "lasso_abundance[focus_point]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|###########################################################################| 60000/60000 [06:48<00:00, 146.74it/s]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[1.23350802e-11, 0.00000000e+00, 4.13635234e-12, ...,\n",
+       "        3.49559318e-10, 1.51539434e-10, 6.92321543e-11],\n",
+       "       [1.07968262e-01, 6.20672265e-02, 8.91957479e-02, ...,\n",
+       "        1.41199045e-01, 1.72748538e-01, 1.82130105e-01],\n",
+       "       [3.63405876e-11, 0.00000000e+00, 1.15299892e-11, ...,\n",
+       "        5.97573048e-10, 2.82786702e-10, 1.21736428e-10],\n",
+       "       ...,\n",
+       "       [8.09760647e-01, 8.73593002e-01, 8.05682610e-01, ...,\n",
+       "        7.39824271e-01, 6.59563529e-01, 6.64421476e-01],\n",
+       "       [3.39514977e-11, 0.00000000e+00, 1.33553970e-11, ...,\n",
+       "        4.10158613e-10, 1.97547170e-10, 8.30956894e-11],\n",
+       "       [9.84639821e-03, 1.26044821e-10, 2.54585576e-02, ...,\n",
+       "        2.81317671e-02, 5.94901874e-02, 5.05626197e-02]])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "abundance[30, 150]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "from scipy import optimize\n",
+    "from tqdm import tqdm\n",
+    "from scipy.optimize import minimize \n",
+    "from scipy.optimize import nnls \n",
     "\n",
-    "optimize.nnls(x1, y1)"
+    "\n",
+    "coefficients = np.zeros((x1.shape[1], y1.shape[1]))\n",
+    "\n",
+    "# define minimization function\n",
+    "min_func = lambda x, A, b: np.linalg.norm(A.dot(x) - b)\n",
+    "#Define constraints and bounds\n",
+    "cons = {'type': 'eq', 'fun': lambda x:  np.sum(x)-1}\n",
+    "bounds = 9*[[0,None]]\n",
+    "\n",
+    "for i in tqdm(range(y1.shape[1])):\n",
+    "    #Define problem\n",
+    "    A = x1\n",
+    "    b = y1[:, i]\n",
+    "\n",
+    "    #Use nnls to get initial guess\n",
+    "    x0, rnorm = nnls(A, b)\n",
+    "\n",
+    "    #Call minimisation subject to these values\n",
+    "    minout = minimize(min_func, x0, args=(A, b), method='SLSQP', \n",
+    "                      bounds=bounds,constraints=cons)\n",
+    "    x = minout.x\n",
+    "    coefficients[:, i] = x\n",
+    "    \n",
+    "coefficients"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "optimize.lsq_linear(x1, y1, bounds=(0,1))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "model_pos = LinearRegression(fit_intercept=False, positive=True).fit(X, mixed_hsi.flatten())\n",
-    "model_pos.coef_"
+    "coefficients[:,0].sum() == 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(9, 60000)"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "model.score(X, mixed_hsi.flatten())"
+    "coefficients.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "58863"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.isclose(coefficients.sum(axis=0), 1).sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "<class 'FileNotFoundError'>",
+     "evalue": "[Errno 2] No such file or directory: 'classification_labels_Pavia.mat'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "File \u001b[1;32m~\\anaconda3\\envs\\manis\\Lib\\site-packages\\scipy\\io\\matlab\\_mio.py:39\u001b[0m, in \u001b[0;36m_open_file\u001b[1;34m(file_like, appendmat, mode)\u001b[0m\n\u001b[0;32m     38\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m---> 39\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(file_like, mode), \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[0;32m     40\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mOSError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[0;32m     41\u001b[0m     \u001b[38;5;66;03m# Probably \"not found\"\u001b[39;00m\n",
+      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'classification_labels_Pavia.mat'",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[21], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Trainining set for classification \u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m Pavia_labels \u001b[38;5;241m=\u001b[39m sio\u001b[38;5;241m.\u001b[39mloadmat(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mclassification_labels_Pavia.mat\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m      3\u001b[0m Training_Set \u001b[38;5;241m=\u001b[39m (np\u001b[38;5;241m.\u001b[39mreshape(Pavia_labels[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtraining_set\u001b[39m\u001b[38;5;124m'\u001b[39m],(\u001b[38;5;241m200\u001b[39m,\u001b[38;5;241m300\u001b[39m)))\u001b[38;5;241m.\u001b[39mT\n\u001b[0;32m      4\u001b[0m Test_Set \u001b[38;5;241m=\u001b[39m (np\u001b[38;5;241m.\u001b[39mreshape(Pavia_labels[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtest_set\u001b[39m\u001b[38;5;124m'\u001b[39m],(\u001b[38;5;241m200\u001b[39m,\u001b[38;5;241m300\u001b[39m)))\u001b[38;5;241m.\u001b[39mT\n",
+      "File \u001b[1;32m~\\anaconda3\\envs\\manis\\Lib\\site-packages\\scipy\\io\\matlab\\_mio.py:225\u001b[0m, in \u001b[0;36mloadmat\u001b[1;34m(file_name, mdict, appendmat, **kwargs)\u001b[0m\n\u001b[0;32m     88\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m     89\u001b[0m \u001b[38;5;124;03mLoad MATLAB file.\u001b[39;00m\n\u001b[0;32m     90\u001b[0m \n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    222\u001b[0m \u001b[38;5;124;03m    3.14159265+3.14159265j])\u001b[39;00m\n\u001b[0;32m    223\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m    224\u001b[0m variable_names \u001b[38;5;241m=\u001b[39m kwargs\u001b[38;5;241m.\u001b[39mpop(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mvariable_names\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;28;01mNone\u001b[39;00m)\n\u001b[1;32m--> 225\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m _open_file_context(file_name, appendmat) \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[0;32m    226\u001b[0m     MR, _ \u001b[38;5;241m=\u001b[39m mat_reader_factory(f, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n\u001b[0;32m    227\u001b[0m     matfile_dict \u001b[38;5;241m=\u001b[39m MR\u001b[38;5;241m.\u001b[39mget_variables(variable_names)\n",
+      "File \u001b[1;32m~\\anaconda3\\envs\\manis\\Lib\\contextlib.py:137\u001b[0m, in \u001b[0;36m_GeneratorContextManager.__enter__\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    135\u001b[0m \u001b[38;5;28;01mdel\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39margs, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mkwds, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mfunc\n\u001b[0;32m    136\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m--> 137\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mnext\u001b[39m(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mgen)\n\u001b[0;32m    138\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mStopIteration\u001b[39;00m:\n\u001b[0;32m    139\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mRuntimeError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mgenerator didn\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mt yield\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n",
+      "File \u001b[1;32m~\\anaconda3\\envs\\manis\\Lib\\site-packages\\scipy\\io\\matlab\\_mio.py:17\u001b[0m, in \u001b[0;36m_open_file_context\u001b[1;34m(file_like, appendmat, mode)\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[38;5;129m@contextmanager\u001b[39m\n\u001b[0;32m     16\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m_open_file_context\u001b[39m(file_like, appendmat, mode\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrb\u001b[39m\u001b[38;5;124m'\u001b[39m):\n\u001b[1;32m---> 17\u001b[0m     f, opened \u001b[38;5;241m=\u001b[39m _open_file(file_like, appendmat, mode)\n\u001b[0;32m     18\u001b[0m     \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m     19\u001b[0m         \u001b[38;5;28;01myield\u001b[39;00m f\n",
+      "File \u001b[1;32m~\\anaconda3\\envs\\manis\\Lib\\site-packages\\scipy\\io\\matlab\\_mio.py:45\u001b[0m, in \u001b[0;36m_open_file\u001b[1;34m(file_like, appendmat, mode)\u001b[0m\n\u001b[0;32m     43\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m appendmat \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m file_like\u001b[38;5;241m.\u001b[39mendswith(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m.mat\u001b[39m\u001b[38;5;124m'\u001b[39m):\n\u001b[0;32m     44\u001b[0m         file_like \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m.mat\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m---> 45\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(file_like, mode), \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[0;32m     46\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m     47\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mOSError\u001b[39;00m(\n\u001b[0;32m     48\u001b[0m         \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mReader needs file name or open file-like object\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m     49\u001b[0m     ) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01me\u001b[39;00m\n",
+      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'classification_labels_Pavia.mat'"
+     ]
+    }
+   ],
    "source": [
     "# Trainining set for classification \n",
     "Pavia_labels = sio.loadmat('classification_labels_Pavia.mat')\n",
