Add Correlation explanation

--- a/Project_AUEB.ipynb
+++ b/Project_AUEB.ipynb
@@ -813,7 +813,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|████████████████████████████████████████████████████████████████████████████| 12829/12829 [03:58<00:00, 53.78it/s]\n"
+      "100%|████████████████████████████████████████████████████████████████████████████| 12829/12829 [02:48<00:00, 76.31it/s]\n"
      ]
     }
    ],
@@ -890,7 +890,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████████████████████████████████████████████████████| 12829/12829 [01:30<00:00, 141.67it/s]\n"
+      "100%|███████████████████████████████████████████████████████████████████████████| 12829/12829 [01:04<00:00, 197.89it/s]\n"
      ]
     }
    ],
@@ -1463,7 +1463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 40,
    "metadata": {
     "tags": []
    },
@@ -1600,7 +1600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 44,
    "metadata": {
     "tags": []
    },
@@ -1678,7 +1678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 47,
    "metadata": {
     "tags": []
    },
@@ -1798,7 +1798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 50,
    "metadata": {
     "tags": []
    },
@@ -1854,7 +1854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -1902,8 +1902,85 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Spectral Unmixing and Classification: Possible Correlations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The results obtained from spectral unmixing (SU), which was posed here as a regression problem, and classification in hyperspectral image (HSI) analysis can be correlated, as both approaches provide information about the materials present in a given pixel."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###  Complementary Information\n",
+    "\n",
+    "Spectral Unmixing provides sub-pixel information by estimating the abundance of pure materials within a mixed pixel, while classification simply assigns each pixel to a specific class.\n",
+    "\n",
+    "The results of spectral unmixing can thus complement the information obtained through classification. While classification provides a discrete label for each pixel, spectral unmixing provides continuous abundance values, indicating the % contribution of different materials within a given pixel. \n",
+    "\n",
+    "Thus, should classification produce fuzzy or unreliable results in any parts of the image, Spectral Unmixing can help in interpreting these areas with the extra information it provides. \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Handling Mixed Pixels\n",
+    "\n",
+    "Spectral Unmixing is specifically designed to handle mixed pixels by decomposing them into their constituent pure materials, while classification may struggle with mixed pixels, as it assigns a single class label to each pixel, potentially overlooking the presence of multiple materials.\n",
+    "\n",
+    "In this project we specifically only focused on pure pixels. As we can see from our data however, real world problems most of the time need to handle mixed pixels. The abundance of mixed pixels is described in van der Meer (1999) `[3]` where according to the author:\n",
+    "\n",
+    "```\n",
+    "Reflected radiation from a pixel as observed in remote sensing  imagery, however, has rarely interacted with a volume composed of a single homogenous material because natural surfaces and vegetation  composed of a single uniform material do not exist. Most often the electromagnetic radiation observed as pixel reflectance values results from the spectral mixture of a number of ground spectral classes present at the surface sensed.\n",
+    "```\n",
+    "\n",
+    "In these cases, spectral unmixing can help in understanding the content of mixed pixels, and the results can guide the classification process. For example, if a pixel is found to have significant abundances of multiple materials, it may be more appropriately assigned to a mixed class during classification.\n",
+    "\n",
+    "Additionally, the aforementioned mixed classified pixels could be then given to a SU algorithm in order to obtain more information on the materials present in the mix."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Derived end-member selection\n",
+    "\n",
+    "Conversly, the classes generated from the classification algorithm can be used as labels in the SU task in order to derive better spectral signatures. This task is called \"end-member selection\", and is described by van der Meer (1999) `[3]` as:\n",
+    "\n",
+    "```\n",
+    "A set of end-members should allow to describe all spectral variability for all pixels, produce unique results, and be of significance to the underlying science objectives.\n",
+    "\n",
+    "Selection of end-members can be achieved in two ways:\n",
+    "1. from a spectral (field or laboratory) library, and\n",
+    "2. from the purest pixels in the image.\n",
+    "\n",
+    "The second method has the advantage that selected end-members were collected under similar atmospheric conditions. End-members resulting through the first option are generally denoted as ‘known’, while those from the second option results are known as ‘derived’ end-members\n",
+    "```\n",
+    "which traditionally was performed using techniques such as PCA."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Summary \n",
+    "In summary, spectral unmixing and classification are complementary techniques that can be used together to obtain a more comprehensive understanding of hyperspectral data. Spectral unmixing provides detailed sub-pixel information, especially for mixed pixels, while classification assigns discrete labels to pixels. Besides allowing a richer interpretation of the HSI, these techniques can generate data used by the other to collaboratively enhance their results (better interepretation in classification and more accurate end-member selection in SU).\n",
+    "\n",
+    "\n",
+    "`[3] van der Meer, F. (1999). Image classification through spectral unmixing. In Spatial Statistics for Remote Sensing (pp. 185-193). Dordrecht: Springer Netherlands.`"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 53,
    "metadata": {
     "tags": []
    },
@@ -1912,7 +1989,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Notebook executed in 8 minutes and 22.6 seconds\n"
+      "Notebook executed in 6 minutes and 6.6 seconds\n"
      ]
     }
    ],
