--- a/Project_AUEB.ipynb
+++ b/Project_AUEB.ipynb
@@ -1373,6 +1373,76 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "def confusion_matrix(true_labels, predicted_labels):\n",
+    "    \"\"\"\n",
+    "    Construct the confusion matrix for a classifier.\n",
+    "\n",
+    "    Parameters:\n",
+    "    - true_labels: numpy array of true labels\n",
+    "    - predicted_labels: numpy array of predicted labels\n",
+    "    - num_classes: number of classes in the classification problem (optional)\n",
+    "\n",
+    "    Returns:\n",
+    "    - confusion_matrix: numpy array representing the confusion matrix\n",
+    "    \"\"\"\n",
+    "    num_classes = max(np.max(true_labels), np.max(predicted_labels)) + 1\n",
+    "\n",
+    "    confusion_matrix = np.zeros((num_classes, num_classes), dtype=int)\n",
+    "\n",
+    "    for true, pred in zip(true_labels, predicted_labels):\n",
+    "        confusion_matrix[true, pred] += 1\n",
+    "\n",
+    "    return confusion_matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "def get_accuracy(confusion_matrix: np.ndarray) -> float:\n",
+    "    \"\"\"\n",
+    "    Calculate the accuracy from a confusion matrix.\n",
+    "\n",
+    "    :param confusion_matrix: A 2D NumPy array representing a confusion matrix.\n",
+    "    :type confusion_matrix: np.ndarray\n",
+    "\n",
+    "    :return: The accuracy calculated from the confusion matrix.\n",
+    "    :rtype: float\n",
+    "    \"\"\"\n",
+    "    return confusion_matrix.diagonal().sum() / confusion_matrix.sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def conf_matrix_heatmap(name, conf_matrix, ax=None):\n",
+    "    ax = sns.heatmap(conf_matrix, \n",
+    "                    cmap=sns.color_palette(\"light:b\", as_cmap=True),\n",
+    "                    cbar_kws={'label': \"Instances Categorized\"},\n",
+    "                    annot=True, \n",
+    "                    fmt=\"d\", \n",
+    "                    linewidths=.5,\n",
+    "                    xticklabels=class_names.values(),\n",
+    "                    yticklabels=class_names.values(), \n",
+    "                    ax=ax)\n",
+    "    plt.title(name)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1420,50 +1490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "naive_model = GaussianNB().fit(x_train, y_train)\n",
-    "naive_train_res = naive_model.predict(x_train)\n",
-    "naive_test_res = naive_model.predict(x_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "def confusion_matrix(true_labels, predicted_labels):\n",
-    "    \"\"\"\n",
-    "    Construct the confusion matrix for a classifier.\n",
-    "\n",
-    "    Parameters:\n",
-    "    - true_labels: numpy array of true labels\n",
-    "    - predicted_labels: numpy array of predicted labels\n",
-    "    - num_classes: number of classes in the classification problem (optional)\n",
-    "\n",
-    "    Returns:\n",
-    "    - confusion_matrix: numpy array representing the confusion matrix\n",
-    "    \"\"\"\n",
-    "    num_classes = max(np.max(true_labels), np.max(predicted_labels)) + 1\n",
-    "\n",
-    "    confusion_matrix = np.zeros((num_classes, num_classes), dtype=int)\n",
-    "\n",
-    "    for true, pred in zip(true_labels, predicted_labels):\n",
-    "        confusion_matrix[true, pred] += 1\n",
-    "\n",
-    "    return confusion_matrix"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 59,
    "metadata": {
     "tags": []
    },
@@ -1480,29 +1507,18 @@
     }
    ],
    "source": [
-    "def conf_matrix_heatmap(name, conf_matrix, ax=None):\n",
-    "    ax = sns.heatmap(conf_matrix, \n",
-    "                    cmap=sns.color_palette(\"light:b\", as_cmap=True),\n",
-    "                    cbar_kws={'label': \"Instances Categorized\"},\n",
-    "                    annot=True, \n",
-    "                    fmt=\"d\", \n",
-    "                    linewidths=.5,\n",
-    "                    xticklabels=class_names.values(),\n",
-    "                    yticklabels=class_names.values(), \n",
-    "                    ax=ax)\n",
-    "    plt.title(name)\n",
+    "naive_model = GaussianNB().fit(x_train, y_train)\n",
+    "naive_train_res = naive_model.predict(x_train)\n",
+    "naive_test_res = naive_model.predict(x_test)\n",
     "\n",
-    "\n",
-    "conf_matrix_heatmap(\"Naive Bayes Confusion Matrix\", \n",
-    "                                 confusion_matrix(naive_test_res, y_test))"
+    "naive_conf = confusion_matrix(naive_test_res, y_test)\n",
+    "conf_matrix_heatmap(\"Naive Bayes Confusion Matrix\", naive_conf)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {
-    "tags": []
-   },
+   "execution_count": 60,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1515,17 +1531,8 @@
     }
    ],
    "source": [
-    "def get_accuracy(predicted_labels: np.ndarray, actual_labels: np.ndarray) -> float:\n",
-    "    \"\"\"\n",
-    "    Get the accuracy of the model based on its predicted and actual labels of its data.\n",
-    "    :param predicted_labels: the labels which the model predicted\n",
-    "    :param actual_labels: the actual labels of the data\n",
-    "    :return: a number between 0 and 1 representing the accuracy of the model\n",
-    "    \"\"\"\n",
-    "    return (predicted_labels.ravel() == actual_labels.ravel()).mean()\n",
-    "\n",
-    "\n",
-    "print(f\"Naive Bayes \\nTraining Accuracy: {get_accuracy(naive_train_res, y_train):.3f}\\nTesting Accuracy: {get_accuracy(naive_test_res, y_test):.3f}\")"
+    "naive_conf_train = confusion_matrix(naive_train_res, y_train)\n",
+    "print(f\"Naive Bayes \\nTraining Accuracy: {get_accuracy(naive_conf_train):.3f}\\nTesting Accuracy: {get_accuracy(naive_conf):.3f}\")"
    ]
   },
   {
@@ -1580,7 +1587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 63,
    "metadata": {
     "tags": []
    },
@@ -1600,7 +1607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 62,
    "metadata": {
     "tags": []
    },
@@ -1618,15 +1625,17 @@
    ],
    "source": [
     "euclid_model = EuclideanDistanceClassifier().fit(x_train, y_train)\n",
+    "\n",
     "euclid_train_res = euclid_model.predict(x_train)\n",
     "euclid_test_res = euclid_model.predict(x_test)\n",
-    "euclid_heat = conf_matrix_heatmap(\"Minimum Euclidean Distance Confusion Matrix\", \n",
-    "                                  confusion_matrix(euclid_test_res, y_test))"
+    "\n",
+    "euclid_conf = confusion_matrix(euclid_test_res, y_test)\n",
+    "conf_matrix_heatmap(\"Minimum Euclidean Distance Confusion Matrix\", euclid_conf)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 64,
    "metadata": {
     "tags": []
    },
@@ -1642,7 +1651,8 @@
     }
    ],
    "source": [
-    "print(f\"Minimum Euclidean Distance \\nTraining Accuracy: {get_accuracy(euclid_train_res, y_train):.3f}\\nTesting Accuracy: {get_accuracy(euclid_test_res, y_test):.3f}\")"
+    "euclid_train_conf = confusion_matrix(euclid_train_res, y_train)\n",
+    "print(f\"Minimum Euclidean Distance \\nTraining Accuracy: {get_accuracy(euclid_train_conf):.3f}\\nTesting Accuracy: {get_accuracy(euclid_conf):.3f}\")"
    ]
   },
   {
@@ -1678,7 +1688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 65,
    "metadata": {
     "tags": []
    },
@@ -1699,13 +1709,14 @@
     "\n",
     "knn_train_res = knn_model.predict(x_train)\n",
     "knn_test_res = knn_model.predict(x_test)\n",
+    "knn_conf = confusion_matrix(knn_test_res, y_test)\n",
     "\n",
-    "knn_heat = conf_matrix_heatmap(f\"{k}-NN Confusion Matrix\", confusion_matrix(knn_test_res, y_test))"
+    "conf_matrix_heatmap(f\"{k}-NN Confusion Matrix\", knn_conf)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 67,
    "metadata": {
     "tags": []
    },
@@ -1721,7 +1732,8 @@
     }
    ],
    "source": [
-    "print(f\"{k}-Nearest Neighbours \\nTraining Accuracy: {get_accuracy(knn_train_res, y_train):.3f}\\nTesting Accuracy: {get_accuracy(knn_test_res, y_test):.3f}\")"
+    "knn_conf_train = confusion_matrix(knn_train_res, y_train)\n",
+    "print(f\"{k}-Nearest Neighbours \\nTraining Accuracy: {get_accuracy(knn_conf_train):.3f}\\nTesting Accuracy: {get_accuracy(knn_conf):.3f}\")"
    ]
   },
   {
@@ -1798,7 +1810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 68,
    "metadata": {
     "tags": []
    },
@@ -1819,14 +1831,14 @@
     "\n",
     "bayes_train_res = bayes_model.predict(x_train)\n",
     "bayes_test_res = bayes_model.predict(x_test)\n",
+    "bayes_conf = confusion_matrix(bayes_test_res, y_test)\n",
     "\n",
-    "bayes_heat = conf_matrix_heatmap(\"Bayesian Confusion Matrix\", \n",
-    "                                 confusion_matrix(bayes_test_res, y_test))"
+    "conf_matrix_heatmap(\"Bayesian Confusion Matrix\", bayes_conf)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 69,
    "metadata": {
     "tags": []
    },
@@ -1842,7 +1854,8 @@
     }
    ],
    "source": [
-    "print(f\"Bayesian Classifier \\nTraining Accuracy: {get_accuracy(bayes_train_res, y_train):.3f}\\nTesting Accuracy: {get_accuracy(bayes_test_res, y_test):.3f}\")"
+    "bayes_conf_train = confusion_matrix(bayes_train_res, y_train)\n",
+    "print(f\"Bayesian Classifier \\nTraining Accuracy: {get_accuracy(bayes_conf_train):.3f}\\nTesting Accuracy: {get_accuracy(bayes_conf):.3f}\")"
    ]
   },
   {
